--- a/calculator.html
+++ b/calculator.html
@@ -57,7 +57,8 @@
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <input type="text" id="result" class="form-control input-group-item" placeholder="result" value="" disabled readonly>
+                    <input type="text" id="result" class="form-control input-group-item" placeholder="result" value=""
+                        disabled readonly>
                     <button class="btn btn-outline-light" type="button" id="copy-to-clipboard" disabled>Copy
                         Result</button>
                 </div>
@@ -70,6 +71,14 @@
                     <button class="btn btn-primary m-1" id="mul">Mul &#215;</button>
                     <button class="btn btn-info m-1" id="div">Div &#247;</button>
                     <input type="reset" class="btn btn-danger m-1" value="Clear">
+                </div>
+            </div>
+            <br>
+            <div class="d-flex">
+                <div class="banner-calc-ad center mt-0 mb-5">
+                    <script async="async" data-cfasync="false"
+                        src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                    <div id="container-7225c0737913a927833588485b779dc1"></div>
                 </div>
             </div>
         </form>
