--- a/cspeed.html
+++ b/cspeed.html
@@ -10,8 +10,7 @@
     <meta name="title" content="MathFlare - Speed Converter">
     <meta name="og:title" content="MathFlare - Speed Converter" />
     <meta name="twitter:title" content="MathFlare - Speed Converter" />
-    <meta name="keywords"
-        content="unit converter, speed converter, converter, kmh to mph, mathflare, math flare">
+    <meta name="keywords" content="unit converter, speed converter, converter, kmh to mph, mathflare, math flare">
     <meta name="description" content="Real time speed unit converter." />
     <meta name="og:description" content="Real time speed unit converter." />
     <meta name="twitter:description" content="Real time speed unit converter." />
@@ -50,26 +49,38 @@
             <h4 class="text-white m-2">MPH</h4>
             <div class="center-form">
                 <input id="inputMPH" class="form-control mb-0" type="number" placeholder="MPH"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">KPH</h4>
             <div class="center-form">
                 <input id="inputKPH" class="form-control mb-0" type="number" placeholder="KPH"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Knots</h4>
             <div class="center-form">
                 <input id="inputKnots" class="form-control mb-0" type="number" placeholder="Knots"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Mach</h4>
             <div class="center-form">
                 <input id="inputMach" class="form-control mb-0" type="number" placeholder="Mach"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <br />
             <div class="center-form">
                 <input type="reset" class="btn btn-danger" value="Reset">
+            </div>
+            <br>
+            <div class="d-flex">
+                <div class="banner-calc-ad center mt-0 mb-5">
+                    <script async="async" data-cfasync="false"
+                        src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                    <div id="container-7225c0737913a927833588485b779dc1"></div>
+                </div>
             </div>
         </form>
     </div>
