--- a/ctemp.html
+++ b/ctemp.html
@@ -69,6 +69,14 @@
             <div class="center-form">
                 <input type="reset" class="btn btn-danger" value="Reset">
             </div>
+            <br>
+            <div class="d-flex">
+                <div class="banner-calc-ad center mt-0 mb-5">
+                    <script async="async" data-cfasync="false"
+                        src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                    <div id="container-7225c0737913a927833588485b779dc1"></div>
+                </div>
+            </div>
         </form>
     </div>
     <!-- SCRIPTS START -->
