--- a/cweight.html
+++ b/cweight.html
@@ -49,31 +49,44 @@
             <h4 class="text-white">Pounds</h4>
             <div class="center-form">
                 <input id="inputPounds" class="form-control mb-0" type="number" placeholder="Pounds"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Kilograms</h4>
             <div class="center-form">
                 <input id="inputKilograms" class="form-control mb-0" type="number" placeholder="Kilograms"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Ounces</h4>
             <div class="center-form">
                 <input id="inputOunces" class="form-control mb-0" type="number" placeholder="Ounces"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Grams</h4>
             <div class="center-form">
                 <input id="inputGrams" class="form-control mb-0" type="number" placeholder="Grams"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Stones</h4>
             <div class="center-form">
                 <input id="inputStones" class="form-control mb-0" type="number" placeholder="Stones"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <br />
             <div class="center-form">
                 <input type="reset" class="btn btn-danger" value="Reset">
+            </div>
+            <br>
+            <div class="d-flex">
+                <div class="banner-calc-ad center mt-0 mb-5">
+                    <script async="async" data-cfasync="false"
+                        src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                    <div id="container-7225c0737913a927833588485b779dc1"></div>
+                </div>
             </div>
         </form>
     </div>
