--- a/perimeter.html
+++ b/perimeter.html
@@ -97,8 +97,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.1"
-                    min="0" />
+                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.1" min="0" />
             </div>
             <br />
             <div class="center-form">
@@ -175,6 +174,13 @@
             <p class="text-success" id="output6"></p>
         </div>
         <br />
+        <div class="d-flex">
+            <div class="banner-calc-ad center mt-0 mb-5">
+                <script async="async" data-cfasync="false"
+                    src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                <div id="container-7225c0737913a927833588485b779dc1"></div>
+            </div>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
