--- a/clenght.html
+++ b/clenght.html
@@ -10,7 +10,8 @@
     <meta name="title" content="MathFlare - Length Converter">
     <meta name="og:title" content="MathFlare - Length Converter" />
     <meta name="twitter:title" content="MathFlare - Length Converter" />
-    <meta name="keywords" content="unit converter, lenght converter, converter, feet to meters, meters to inches, mathflare, math flare">
+    <meta name="keywords"
+        content="unit converter, lenght converter, converter, feet to meters, meters to inches, mathflare, math flare">
     <meta name="description" content="Real time lenght unit converter." />
     <meta name="og:description" content="Real time lenght unit converter." />
     <meta name="twitter:description" content="Real time lenght unit converter." />
@@ -49,41 +50,56 @@
             <h4 class="text-white">Feet</h4>
             <div class="center-form">
                 <input id="inputFeet" class="form-control mb-0" type="number" placeholder="Feet"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Meters</h4>
             <div class="center-form">
                 <input id="inputMeters" class="form-control mb-0" type="number" placeholder="Meters"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Inches</h4>
             <div class="center-form">
                 <input id="inputInches" class="form-control mb-0" type="number" placeholder="Inches"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">cm</h4>
             <div class="center-form">
                 <input id="inputcm" class="form-control mb-0" type="number" placeholder="cm"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Yards</h4>
             <div class="center-form">
                 <input id="inputYards" class="form-control mb-0" type="number" placeholder="Yards"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Kilometers</h4>
             <div class="center-form">
                 <input id="inputKilometers" class="form-control mb-0" type="number" placeholder="Kilometers"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <h4 class="text-white m-2">Miles</h4>
             <div class="center-form">
                 <input id="inputMiles" class="form-control mb-0" type="number" placeholder="Miles"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)"
+                    step="0.1">
             </div>
             <br />
             <div class="center-form">
                 <input type="reset" class="btn btn-danger" value="Reset">
+            </div>
+            <br>
+            <div class="d-flex">
+                <div class="banner-calc-ad center mt-0 mb-5">
+                    <script async="async" data-cfasync="false"
+                        src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                    <div id="container-7225c0737913a927833588485b779dc1"></div>
+                </div>
             </div>
         </form>
     </div>
