--- a/pointsdistance.html
+++ b/pointsdistance.html
@@ -74,8 +74,16 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=calculate+distance+between+two+points" target="_blank"
-                rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://duckduckgo.com/?q=calculate+distance+between+two+points" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <br>
+        <div class="d-flex">
+            <div class="banner-calc-ad center mt-0 mb-5">
+                <script async="async" data-cfasync="false"
+                    src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                <div id="container-7225c0737913a927833588485b779dc1"></div>
+            </div>
         </div>
     </div>
     <!-- SCRIPTS START -->
