--- a/roots.html
+++ b/roots.html
@@ -10,7 +10,8 @@
     <meta name="title" content="MathFlare - Root Calculator">
     <meta name="og:title" content="MathFlare - Root Calculator" />
     <meta name="twitter:title" content="MathFlare - Root Calculator" />
-    <meta name="keywords" content="square root, root, nth root, cube root, root calculator, math, mathflare, math flare">
+    <meta name="keywords"
+        content="square root, root, nth root, cube root, root calculator, math, mathflare, math flare">
     <meta name="description" content="Calculate the square, cubic or nth root of a number" />
     <meta name="og:description" content="Calculate the square, cubic or nth root of a number" />
     <meta name="twitter:description" content="Calculate the square, cubic or nth root of a number" />
@@ -48,8 +49,7 @@
         <form autocomplete="off">
             <h3 class="text-white">Square Root</h3>
             <div class="center-form">
-                <input type="number" id="sqrtrad" placeholder="radicand" class="form-control mb-0" step="0.1"
-                    min="0" />
+                <input type="number" id="sqrtrad" placeholder="radicand" class="form-control mb-0" step="0.1" min="0" />
             </div>
             <br />
             <div class="center-form">
@@ -69,8 +69,7 @@
         <form autocomplete="off">
             <h3 class="text-white">Cube Root</h3>
             <div class="center-form">
-                <input type="number" id="cbrtrad" placeholder="radicand" class="form-control mb-0" step="0.1"
-                    min="0" />
+                <input type="number" id="cbrtrad" placeholder="radicand" class="form-control mb-0" step="0.1" min="0" />
             </div>
             <br />
             <div class="center-form">
@@ -98,7 +97,7 @@
                 <input type="number" id="nrootrad" placeholder="radicant" class="form-control mb-0" step="0.1"
                     min="0" />
             </div>
-            <br /> 
+            <br />
             <div class="center-form">
                 <input type="submit" id="nrootcalc" class="btn btn-success btn-lg" value="Calculate nth Root" />
             </div>
@@ -111,6 +110,14 @@
         <div class="my-4">
             <a href="https://duckduckgo.com/?q=calculate+nth+root" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <br>
+        <div class="d-flex">
+            <div class="banner-calc-ad center mt-0 mb-5">
+                <script async="async" data-cfasync="false"
+                    src="//pl16535411.highperformancecpm.com/7225c0737913a927833588485b779dc1/invoke.js"></script>
+                <div id="container-7225c0737913a927833588485b779dc1"></div>
+            </div>
         </div>
     </div>
     <!-- SCRIPTS START -->
