--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Neutralizations Reaction Calculator</title>
-    <meta name="title" content="MathFlare - Neutralizations Reaction Calculator">
-    <meta name="og:title" content="MathFlare - Neutralizations Reaction Calculator" />
-    <meta name="twitter:title" content="MathFlare - Neutralizations Reaction Calculator" />
+    <title>MathFlare - Acid-Metal Reaction Calculator</title>
+    <meta name="title" content="MathFlare - Acid-Metal Reaction Calculator">
+    <meta name="og:title" content="MathFlare - Acid-Metal Reaction Calculator" />
+    <meta name="twitter:title" content="MathFlare - Acid-Metal Reaction Calculator" />
     <meta name="keywords"
-        content="neutralization reactions, chemistry neutralizations, chemistry, math, mathflare, math flare">
-    <meta name="description" content="Calculate neutralization reactions" />
-    <meta name="og:description" content="Calculate chemistry neutralizations reactions" />
-    <meta name="twitter:description" content="Calculate chemistry neutralizations reactions" />
+        content="acid-metal reactions, chemistry acid-metal, chemistry, metal, mathflare, math flare">
+    <meta name="description" content="Calculate acid-metal reactions" />
+    <meta name="og:description" content="Calculate chemistry acid-metal reactions" />
+    <meta name="twitter:description" content="Calculate chemistry acid-metal reactions" />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/neutralization" />
-    <link rel="canonical" href="https://www.mathflare.xyz/neutralization">
+    <meta name="og:url" content="https://www.mathflare.xyz/acidmetalreaction" />
+    <link rel="canonical" href="https://www.mathflare.xyz/acidmetalreaction">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -44,18 +44,18 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Neutralization Reaction Calculator</h1>
+        <h1 class="text-white">Acid-Metal Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span><sub
-                    class="text-warning">z</sub> + <span class="text-warning">W</span><sub
-                    class="text-warning">k</sub>OH<sub class="text-warning">m</sub></h4>
+                    class="text-warning">z</sub> + <span class="text-warning">M</span><sup
+                    class="text-warning">+v</sup></h4>
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">index</span>
                     <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="text" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
+                    <input type="text" id="m" placeholder="M" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">element</span>
                 </div>
@@ -66,7 +66,7 @@
                     <span class="input-group-text">element</span>
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="number" id="k" placeholder="k" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">index</span>
                 </div>
@@ -77,23 +77,20 @@
                     <span class="input-group-text">index</span>
                     <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
-                        min="0" />
-                    <span class="input-group-text">index</span>
                 </div>
             </div>
             <br>
             <div class="center-form">
-                <input type="submit" id="eliminationcalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="submit" id="acmetalcalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
         </form>
         <br />
         <div style="max-height: 1em;">
-            <p class="text-success" id="eliminationout"></p>
+            <p class="text-success" id="acmetalout"></p>
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=neutralization+reaction" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=acid-metal+reaction" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <br>
@@ -108,7 +105,7 @@
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/elimination.js"></script>
+    <script src="dist/acid-metalreaction.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
