fix: fixed carbon combustion calc and home page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="Assets/calculator.svg" alt="calculator" width="80%" class="img-fluid">
             </div>
             <div class="col-md p-2 p-md-5">
-                <h2 class="text-warning fw-normal">60+ Calculators</h2>
+                <h2 class="text-warning fw-normal">70+ Calculators</h2>
                 <p class="lead">With our ever-expanding collection of fully functional and advanced calculators, we got
                     you covered for any problem you may encounter.</p>
             </div>
@@ -109,9 +109,7 @@
             </div>
             <div class="col-md p-2 p-md-5">
                 <h2 class="text-warning fw-normal">Support the Open Source Project</h2>
-                <p class="lead">As an open source project with no advertisements or shady data collection, MathFlare's
-                    only source of income are donations from our supporters. If you would like to help us
-                    continue developing MathFlare, please consider financially supporting us through <a
+                <p class="lead">If you would like to help us  continue developing MathFlare, please consider financially supporting us through <a
                         href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"
                         class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
                         rel="noopener" class="donate-link">Ko-fi</a>, <a href="https://patreon.com/mathflare"
