--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -47,8 +47,7 @@
         <h1 class="text-white">Acid-Metal Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span><sub
-                    class="text-warning">z</sub> + <span class="text-warning">M</span><sup
+            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span class="text-warning">M</span><sup
                     class="text-warning">+v</sup></h4>
             <div class="center-form">
                 <div class="input-group">
@@ -57,26 +56,18 @@
                         min="0" />
                     <input type="text" id="m" placeholder="M" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <span class="input-group-text">element</span>
+                    <span class="input-group-text">Metal</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">element</span>
+                    <span class="input-group-text">Non-Metal</span>
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">index</span>
-                </div>
-            </div>
-            <br />
-            <div class="center-form">
-                <div class="input-group">
-                    <span class="input-group-text">index</span>
-                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
-                        min="0" />
                 </div>
             </div>
             <br>
