refactor: general codebase refactoring

--- a/calculator.html
+++ b/calculator.html
@@ -82,7 +82,7 @@
     <script src="dist/calc.js"></script>
     <script>
         window.onload = () => {
-            document.getElementById('copy-to-clipboard').disabled = true;
+            document.querySelector('#copy-to-clipboard').disabled = true;
         }
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
