--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -10,8 +10,7 @@
     <meta name="title" content="MathFlare - Acid-Metal Reaction Calculator">
     <meta name="og:title" content="MathFlare - Acid-Metal Reaction Calculator" />
     <meta name="twitter:title" content="MathFlare - Acid-Metal Reaction Calculator" />
-    <meta name="keywords"
-        content="acid-metal reactions, chemistry acid-metal, chemistry, metal, mathflare, math flare">
+    <meta name="keywords" content="acid-metal reactions, chemistry acid-metal, chemistry, metal, mathflare, math flare">
     <meta name="description" content="Calculate acid-metal reactions" />
     <meta name="og:description" content="Calculate chemistry acid-metal reactions" />
     <meta name="twitter:description" content="Calculate chemistry acid-metal reactions" />
@@ -47,8 +46,8 @@
         <h1 class="text-white">Acid-Metal Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span class="text-warning">M</span><sup
-                    class="text-warning">+v</sup></h4>
+            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span
+                    class="text-warning">M</span><sup class="text-warning">+v</sup></h4>
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">index</span>
@@ -81,15 +80,15 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=acid-metal+reaction" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calcualte+acid-metal+reaction" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
-        <br> 
+        <br>
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/acid-metalreaction.js"></script>
+    <script src="dist/acidmetalreaction.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
