--- a/neutralization.html
+++ b/neutralization.html
@@ -88,7 +88,7 @@
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/elimination.js"></script>
+    <script src="dist/neutralization.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
