--- a/fact.html
+++ b/fact.html
@@ -43,7 +43,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Factorials</h1>
+        <h1 class="text-white">Factorial Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the number</h4>
