--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathFlare - Home</title>
     <meta name="title" content="MathFlare">
@@ -37,7 +36,6 @@
     <link rel="icon" type="image/png" href="Assets/android-chrome-192x192.png" sizes=192x192>
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
     <!-- SCRIPTS -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -54,7 +52,8 @@
         <div class="text-center mb-5">
             <h1 class="display-5" style="font-weight: 450;"><img src="Assets/icon.png" class="user-select-none mb-1"
                     style="height: 1em;" alt="logo"> MathFlare</h1>
-            <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Nunito', Poppins, sans-serif;">the go-to
+            <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Mathnito', 'MathFont', sans-serif;">the
+                go-to
                 website for algebra and geometry</p>
         </div>
         <div class="center mb-5 mt-0">
