beta: starting acid carbonate calc

--- a/acidcarbonate.html
+++ b/acidcarbonate.html
@@ -51,9 +51,9 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">Metal</span>
-                    <input type="number" id="x" placeholder="X" class="form-control input-group-item" step="0.1"
+                    <input type="text" id="x" placeholder="X" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="text" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">index</span>
                 </div>
@@ -62,9 +62,9 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">index</span>
-                    <input type="text" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <input type="number" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">Non-Metal</span>
                 </div>
