fix: minor changes

--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -55,13 +55,13 @@
                         min="0" />
                     <input type="text" id="m" placeholder="M" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <span class="input-group-text">Metal</span>
+                    <span class="input-group-text">metal</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">Non-Metal</span>
+                    <span class="input-group-text">non-metal</span>
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
