--- a/inorganiccomp.html
+++ b/inorganiccomp.html
@@ -6,15 +6,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Inorganic Compounds Calculator</title>
-    <meta name="title" content="MathFlare - Inorganic Compounds Calculator">
-    <meta name="og:title" content="MathFlare - Inorganic Compounds Calculator" />
-    <meta name="twitter:title" content="MathFlare -Inorganic Compounds Calculator" />
-    <meta name="keywords"
-        content="inorganic compounds, chemistry inorganic, chemistry, math, mathflare, math flare">
+    <title>MathFlare - Inorganic Compound Calculator</title>
+    <meta name="title" content="MathFlare - Inorganic Compound Calculator">
+    <meta name="og:title" content="MathFlare - Inorganic Compound Calculator" />
+    <meta name="twitter:title" content="MathFlare -Inorganic Compound Calculator" />
+    <meta name="keywords" content="inorganic compounds, chemistry inorganic, chemistry, math, mathflare, math flare">
     <meta name="description" content="Calculate inorganic compounds" />
-    <meta name="og:description" content="Calculate chemistry inorganic compounds" />
-    <meta name="twitter:description" content="Calculate chemistry inorganic compounds" />
+    <meta name="og:description" content="Calculate inorganic compounds" />
+    <meta name="twitter:description" content="Calculate inorganic compounds" />
     <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/inorganiccomp" />
     <link rel="canonical" href="https://www.mathflare.xyz/inorganiccomp">
@@ -44,18 +43,19 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Inorganic Compounds Calculator</h1>
+        <h1 class="text-white">Inorganic Compound Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white">X<sup class="text-warning">+z</sup><span class="text-warning"> + </span>Y<sup class="text-warning">-v</sup></h4>
+            <h4 class="text-white">X<sup class="text-warning">+z</sup><span class="text-warning"> + </span>Y<sup
+                    class="text-warning">-v</sup></h4>
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">Metal</span>
+                    <span class="input-group-text">metal</span>
                     <input type="text" id="x" placeholder="X" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <span class="input-group-text">Non-Metal</span>
+                    <span class="input-group-text">non-metal</span>
                 </div>
             </div>
             <br />
@@ -64,7 +64,7 @@
                     <span class="input-group-text">index</span>
                     <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1"
                         min="0" />
-                        <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">index</span>
                 </div>
@@ -80,7 +80,7 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=inorganic+compounds" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+inorganic+compounds" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <br />
