--- a/neutralization.html
+++ b/neutralization.html
@@ -13,8 +13,8 @@
     <meta name="keywords"
         content="neutralization reactions, chemistry neutralizations, chemistry, math, mathflare, math flare">
     <meta name="description" content="Calculate neutralization reactions" />
-    <meta name="og:description" content="Calculate chemistry neutralizations reactions" />
-    <meta name="twitter:description" content="Calculate chemistry neutralizations reactions" />
+    <meta name="og:description" content="Calculate neutralizations reactions" />
+    <meta name="twitter:description" content="Calculate neutralizations reactions" />
     <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/neutralization" />
     <link rel="canonical" href="https://www.mathflare.xyz/neutralization">
@@ -47,7 +47,8 @@
         <h1 class="text-white">Neutralization Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span class="text-warning">W</span>OH<sub class="text-warning">m</sub></h4>
+            <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span
+                    class="text-warning">W</span>OH<sub class="text-warning">m</sub></h4>
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">index</span>
@@ -55,16 +56,16 @@
                         min="0" />
                     <input type="text" id="w" placeholder="W" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <span class="input-group-text">Metal</span>
+                    <span class="input-group-text">metal</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">Non-Metal</span>
+                    <span class="input-group-text">non-metal</span>
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                        <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
+                    <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <span class="input-group-text">index</span>
                 </div>
@@ -80,10 +81,9 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=neutralization+reaction" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+neutralization+reaction" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
-        <br />
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
