--- a/acidcarbonatereaction.html
+++ b/acidcarbonatereaction.html
@@ -10,13 +10,14 @@
     <meta name="title" content="MathFlare - Acid-Carbonate Reaction Calculator">
     <meta name="og:title" content="MathFlare - Acid-Carbonate Reaction Calculator" />
     <meta name="twitter:title" content="MathFlare - Acid-Carbonate Reaction Calculator" />
-    <meta name="keywords" content="acid-carbonate reactions, chemistry acid-carbonate, chemistry, carbonate, mathflare, math flare">
+    <meta name="keywords"
+        content="acid-carbonate reactions, chemistry acid-carbonate, chemistry, carbonate, mathflare, math flare">
     <meta name="description" content="Calculate acid-carbonate reactions" />
     <meta name="og:description" content="Calculate chemistry acid-carbonate reactions" />
     <meta name="twitter:description" content="Calculate chemistry acid-carbonate reactions" />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/acidcarbonatereact" />
-    <link rel="canonical" href="https://www.mathflare.xyz/acidcarbonatereact">
+    <meta name="og:url" content="https://www.mathflare.xyz/acidcarbonatereaction" />
+    <link rel="canonical" href="https://www.mathflare.xyz/acidcarbonatereaction">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -46,11 +47,13 @@
         <h1 class="text-white">Acid-Carbonate Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h4 class="text-white"><span class="text-warning">X</span><sub class="text-white">2</sub><span class="text-warning">(<span class="text-white">CO<sub>3</sub></span>)</span><sub class="text-warning">z</sub> + <span
-                    class="text-white">H</span><sub class="text-warning">v</sub><span class="text-warning">Y</span></h4>
+            <h4 class="text-white"><span class="text-warning">X</span><sub class="text-white">2</sub><span
+                    class="text-warning">(<span class="text-white">CO<sub>3</sub></span>)</span><sub
+                    class="text-warning">z</sub> + <span class="text-white">H</span><sub
+                    class="text-warning">v</sub><span class="text-warning">Y</span></h4>
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">Metal</span>
+                    <span class="input-group-text">metal</span>
                     <input type="text" id="x" placeholder="X" class="form-control input-group-item" step="0.1"
                         min="0" />
                     <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1"
@@ -66,17 +69,17 @@
                         min="0" />
                     <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1"
                         min="0" />
-                    <span class="input-group-text">Non-Metal</span>
+                    <span class="input-group-text">non-metal</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="accarbcalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="submit" id="acidcarboncalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
         </form>
         <br />
         <div style="max-height: 1em;">
-            <p class="text-success" id="accarbout"></p>
+            <p class="text-success" id="acidcarbonout"></p>
         </div>
         <br />
         <div class="my-4">
