fix: fixed content menu in cheat sheet

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -10,7 +10,8 @@
     <meta name="title" content="MathFlare - Cheat Sheet">
     <meta name="og:title" content="MathFlare - Cheat Sheet" />
     <meta name="twitter:title" content="MathFlare - Cheat Sheet" />
-    <meta name="keywords" content="cheat sheet, formulas, math, algebra, geometry, trigonometry, identites, trigonometric numbers, powers of ten, factorials, mathflare, math flare">
+    <meta name="keywords"
+        content="cheat sheet, formulas, math, algebra, geometry, trigonometry, identites, trigonometric numbers, powers of ten, factorials, mathflare, math flare">
     <meta name="description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="og:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="twitter:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
@@ -44,6 +45,20 @@
 
         .row img {
             cursor: pointer;
+        }
+
+        .list-group-item-dark {
+            background-color: hsl(210, 10%, 23%) !important;
+            border-color: hsl(210, 11%, 15%) !important;
+        }
+
+        .list-group-item-dark:hover,
+        .list-group-item-dark:focus {
+            background-color: hsl(210, 10%, 30%) !important;
+        }
+
+        .list-group-item-dark:active {
+            background-color: hsl(210, 10%, 35%) !important;
         }
     </style>
 </head>
