--- a/fractionreduction.html
+++ b/fractionreduction.html
@@ -6,17 +6,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Fraction Simplification Calculator</title>
-    <meta name="title" content="MathFlare - Fraction Simplification Calculator">
-    <meta name="og:title" content="MathFlare - Fraction Simplification Calculator" />
-    <meta name="twitter:title" content="MathFlare - Fraction Simplification Calculator" />
-    <meta name="keywords" content="fraction, simplification, calculator, algebra, mathflare, math flare">
-    <meta name="description" content="Simplify fractions" />
-    <meta name="og:description" content="Simplify fractions" />
-    <meta name="twitter:description" content="Simplify fractions" />
+    <title>MathFlare - Fraction Reduction Calculator</title>
+    <meta name="title" content="MathFlare - Fraction Reduction Calculator">
+    <meta name="og:title" content="MathFlare - Fraction Reduction Calculator" />
+    <meta name="twitter:title" content="MathFlare - Fraction Reduction Calculator" />
+    <meta name="keywords"
+        content="fraction, reduction, fraction reducer, reduce fractions, calculator, algebra, mathflare, math flare">
+    <meta name="description" content="Reduce fractions" />
+    <meta name="og:description" content="Reduce fractions" />
+    <meta name="twitter:description" content="Reduce fractions" />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/fractionsimplification" />
-    <link rel="canonical" href="https://www.mathflare.xyz/fractionsimplification">
+    <meta name="og:url" content="https://www.mathflare.xyz/fractionreduction" />
+    <link rel="canonical" href="https://www.mathflare.xyz/fractionreduction">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -43,10 +44,10 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Fraction Simplification</h1>
+        <h1 class="text-white">Fraction Reduction Calcualtor</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-            <h2 class="text-white"><var>x/y</var></h2>
+            <h2 class="text-white"><sup>x</sup>&frasl;<sub>y</sub></h2>
             <hr class="bg-danger" style="width: 30%;" />
             <h4 class="text-white">Enter the numerator</h4>
             <div class="center-form">
@@ -59,16 +60,16 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+                <input type="submit" id="reductioncalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
         </form>
         <br />
         <div style="max-height: 1em;">
-            <p class="text-success" id="output"></p>
+            <p class="text-success" id="reductionout"></p>
         </div>
         <br />
         <div class="my-4">
-            <a href="https://duckduckgo.com/?q=Fraction+Simplification" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=reduce+fractions" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <br />
@@ -76,7 +77,7 @@
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/fractionsimplification.js"></script>
+    <script src="dist/fract-reduction.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
