fix: fixed find information on the web for DNA

--- a/complementarydna.html
+++ b/complementarydna.html
@@ -64,7 +64,7 @@
                 <input type="submit" id="compdnacalc" class="btn btn-success btn-lg" value="Generate">
             </div>
             <div class="my-4">
-                <a href="https://duckduckgo.com/?q=calculate+average" target="_blank" rel="noopener"
+                <a href="https://duckduckgo.com/?q=DNA+sequence" target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
         </form>
